Add --add-exports